<resources>
    <string name="app_name">PrinterLogic</string>
    <string name="select_document">Select Document</string>
    <string name="path">Path - </string>
    <string name="next">Next</string>
    <string name="select_printer">Select Printer</string>
    <string name="add_manual_printer">Add Manual Printer</string>
    <string name="print">Print</string>
    <string name="printer_ip">Printer IP</string>
    <string name="add_printer">Add Printer</string>
    <string name="cancel">Cancel</string>
    <string name="get_attribute_response">Get Attribute Response</string>
    <string name="printer_response">Printer Response</string>
    <string name="selected_document">Selected Document</string>
    <string name="selected_printer">Selected Printer</string>
    <string name="Ok">Ok</string>
    <string name="format_supported">Format Supported</string>
    <string name="is_print_supported">Is Print Supported</string>
    <string name="permission_required">Permission Required</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="ProceedPrint">Proceed Print</string>
    <string name="enter_username">Enter Username..</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_in">Sign In</string>
    <string name="or">OR</string>
    <string name="sign_in_with_okta">Sign In With Okta</string>
    <string name="sign_in_with_azure_ad">Sign In With Azure AD</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="print_release">Print Release(W)</string>
    <string name="print_releaseForServer">Print Release</string>
    <string name="printerForServer">Printers</string>
    <string name="printer">Printer(W)</string>
    <string name="servicePortal">Add Printer</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bottom_navigation_for_server_print">Print</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_work_space">Work Space</string>
    <string name="menu_storage">Storage</string>
    <string name="menu_reports">Reports</string>
    <string name="menu_forms">Forms</string>
    <string name="menu_capture">Capture</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="ic_keyboard_arrow_left">&#xe0c6;</string>
    <string name="ic_keyboard_arrow_right">&#xe0c7;</string>
    <string name="ic_email">&#xe087;</string>
    <string name="ic_add">&#xe006;</string>
    <string name="ic_close">&#xe048;</string>
    <string name="ic_folder">&#xe09d;</string>
    <string name="ic_keyboard_arrow_down">&#xe0c5;</string>
    <string name="ic_print">&#xe126;</string>
    <string name="ic_add_circle">&#xe009;</string>
    <string name="yourcompany_vasion_com"><font size="18">yourcompany.printercloud.com</font></string>
    <string name="title_activity_qr_code_scan">QrCodeScanActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>